versioned_docs/version-1.5.0/deploy/install/install-with-rancher.md
---
title: Install as a Rancher Apps & Marketplace
description: Run Longhorn on Kubernetes with Rancher 2.x
sidebar_position: 7
---

One benefit of installing Longhorn through Rancher Apps & Marketplace is that Rancher provides authentication to the Longhorn UI.

If there is a new version of Longhorn available, you will see an `Upgrade Available` sign on the `Apps & Marketplace` screen. You can click `Upgrade` button to upgrade Longhorn manager. See more about upgrade [here](../upgrade).

## Prerequisites

Each node in the Kubernetes cluster where Longhorn is installed must fulfill [these requirements.](..#installation-requirements)

[This script](https://github.com/longhorn/longhorn/blob/v[[< current-version >]]/scripts/environment_check.sh) can be used to check the Longhorn environment for potential issues.

## Installation

> **Note**:
> * For Kubernetes < v1.25, if your cluster still enables Pod Security Policy admission controller, set `Other Settings > Pod Security Policy` to `true` to install `longhorn-psp` PodSecurityPolicy resource which allows privileged Longhorn pods to start.

1. Optional: If Rancher version is 2.5.9 or before, we recommend creating a new project for Longhorn, for example, `Storage`.
2. Navigate to the cluster where you will install Longhorn.
    ![images](/img/screenshots/install/rancher-2.6/select-project.png)
3. Navigate to the `Apps & Marketplace` screen.
    ![images](/img/screenshots/install/rancher-2.6/apps-launch.png)
4. Find the Longhorn item in the charts and click it.
    ![images](/img/screenshots/install/rancher-2.6/longhorn.png)
5. Click **Install**.
    ![images](/img/screenshots/install/rancher-2.6/longhorn-chart.png)
6. Optional: Select the project where you want to install Longhorn.
7. Optional: Customize the default settings.
    ![images](/img/screenshots/install/rancher-2.6/launch-longhorn.png)
8. Click Next. Longhorn will be installed in the longhorn-system namespace.
    ![images](/img/screenshots/install/rancher-2.6/installed-longhorn.png)
9. Click the Longhorn App Icon to navigate to the Longhorn dashboard.
    ![images](/img/screenshots/install/rancher-2.6/dashboard.png)

After Longhorn has been successfully installed, you can access the Longhorn UI by navigating to the `Longhorn` option from Rancher left panel.
